--- a/CDExcellent/CDExcellent.csproj
+++ b/CDExcellent/CDExcellent.csproj
@@ -6,7 +6,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
-  <ItemGroup>    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.19">
+  <ItemGroup>    <PackageReference Include="Microsoft.AspNetCore.Authentication" Version="2.2.0" />    <PackageReference Include="Microsoft.AspNetCore.Authentication.Cookies" Version="2.2.0" />    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.12" />    <PackageReference Include="Microsoft.AspNetCore.Authorization" Version="7.0.9" />    <PackageReference Include="Microsoft.AspNetCore.Authorization.Policy" Version="2.2.0" />    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.19">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
@@ -15,11 +15,13 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.14" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Swashbuckle.AspNetCore.Filters" Version="7.0.8" />
   </ItemGroup>
 
 
